--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,13 @@
     "name": "dadolun95/magento2-sib-contact-sync",
     "description": "Magento2 Brevo (Sendinblue previously) Contact Sync Integration Module",
     "type": "magento2-module",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "require": {
-        "dadolun95/magento2-sib-core": "^1.0.5",
+        "dadolun95/magento2-sib-core": "^1.0.6",
         "sendinblue/api-v3-sdk": "^8.4.0"
     },
     "license": [
-        "OSL-3.0",
-        "AFL-3.0"
+        "MIT"
     ],
     "authors": [
         {
