--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "dadolun95/magento2-brevo-sendinblue-light",
     "description": "Magento2 Brevo (Sendinblue previously) Contact Sync Integration Module",
     "type": "magento2-module",
-    "version": "1.0.13",
+    "version": "1.0.14",
     "require": {
-        "dadolun95/magento2-brevo-sendinblue-core": "^1.0.13",
-        "sendinblue/api-v3-sdk": "^8.4.0"
+        "dadolun95/magento2-brevo-sendinblue-core": "^1.0",
+        "getbrevo/brevo-php": "^1.0"
     },
     "license": [
         "MIT"
